--- a/web/src/global.css
+++ b/web/src/global.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-  @apply bg-[#09090A] text-zinc-100;
+  @apply dark:bg-[#09090A] dark:text-zinc-100 bg-[#E5E5E5] text-zinc-800;
 }
